Registro login por facebook

--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@
        <p id="eremail" class="error"></p>
        <input type="password" data-clear-btn="true" name="text-7" id="passreg" value="" placeholder="Contraseña">
        <p id="erpass" class="error"></p>
-       <label for="slider2">Esconder mis datos a los usuarios de MedChoice:</label>
+       <label for="slider2">Sexo:</label>
+       <select name="sexo" id="sexo">
+            <option value="male" selected="selected">Hombre</option>
+            <option value="female">Mujer</option>
+       </select>
+        <label for="slider2">Esconder mis datos a los usuarios de MedChoice:</label>
        <select name="identidad" id="identidad" data-role="slider">
             <option value="0">No</option>
             <option value="1" selected="">Si</option>
