--- a/index.html
+++ b/index.html
@@ -155,17 +155,18 @@
 
           <p id="estadoUpdate"></p>
           <a href="#" class="ui-btn ui-icon-alert ui-btn-icon-left ui-shadow ui-corner-all actualizar">Realizar Update</a>
-          <div data-role="popup" id="popupUpdate" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
-              <div data-role="header" data-theme="a">
+          <div data-role="popup" id="popupUpdate" data-overlay-theme="b" data-theme="b" data-dismissible="false">
+            <div data-role="header" data-theme="b">
               <h1>Actualización disponible</h1>
-              </div>
-              <div role="main" class="ui-content">
-                  <h3 class="ui-title">Desea realizar la actualización disponible?</h3>
-                  <p>Al realizar una actualización perderá los examenes interrumpidos. Para realizar la actualización debe contar con conexión a internet al momento de efectuarla.</p>
-                  <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back">En otro momento</a>
-                  <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b actualizar" data-transition="flow">Actualizar</a>
-              </div>
-          </div>
+            </div>
+            <div role="main" class="ui-content">
+                <h3>Desea realizar la actualización disponible?</h3>
+                <p>Al realizar una actualización perderá los examenes interrumpidos. Para realizar la actualización debe contar con conexión a internet al momento de efectuarla.</p>
+                <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back"><i class="pe-7s-close pe-fw"></i><span>En otro momento</span></a>
+                <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b actualizar" data-transition="flow">
+                  <i class="pe-7s-refresh-cloud pe-fw"></i><span>Actualizar</span></a>
+            </div>
+          </div><!--POPUP-->
       </div><!-- /content -->
 
       <div data-role="footer" data-theme="b" data-position="fixed">
@@ -174,9 +175,9 @@
 </div><!-- /page -->
 <div data-role="page" id="pageexamenes" style="background-color:#fff">
  <div data-role="header" data-theme="a">
-     <a href="#mypanel" class="ui-btn-left options"><span class="pe-7s-menu"></a>
+     <a href="#mypanel" class="ui-btn-left options"><span class="pe-7s-menu"></span></a>
      <h1></h1>
-     <a href="#" class="ui-btn-right closeSession salir"><span class="pe-7s-delete-user"></a>
+     <a href="#" class="ui-btn-right closeSession salir"><span class="pe-7s-delete-user"></span></a>
  </div><!-- /header -->
 
  <div role="main" class="ui-content">
@@ -191,7 +192,7 @@
 
 </div><!-- /content -->
 <!--CONFIRMACION POPUP-->
-<div data-role="popup" id="popupDialog" data-overlay-theme="b" data-theme="b" data-dismissible="false" style="max-width:400px;">
+<div data-role="popup" id="popupDialog" data-overlay-theme="b" data-theme="b" data-dismissible="false">
     <div data-role="header" data-theme="b">
     <h1>Comenzar Exámen</h1>
     </div>
@@ -201,7 +202,7 @@
         <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" id="continuar" style="display:none;"><i class="pe-7s-timer pe-fw"></i><span>Continuar</span></a>
         <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" id="iniciar"><i class="pe-7s-stopwatch pe-fw"></i><span>Iniciar</span></a>
     </div>
-</div>
+</div><!--POPUP-->
 
 <div data-role="footer" data-theme="b" data-position="fixed">
 
@@ -290,7 +291,6 @@
 <div data-role="page" id="pageranking" style="background-color:#fff">
 
  <div data-role="header" data-theme="b">
-     <div data-role="header" data-theme="b">
        <a href="#mypanel" class="ui-btn-left options"><span class="pe-7s-menu"></a>
        <h1></h1>
        <a href="#" class="ui-btn-right closeSession salir"><span class="pe-7s-delete-user"></a>
