CSS densidad 1.5, droid, terminada

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
      <div data-role="header" data-theme="b"></div><!-- /header -->
 
      <div role="main" class="ui-content" >
-      <p id="pruebacss">texto loco</p>
+      <p id="pruebacss">texto prueba css</p>
       <div id="centrador">
         <div id="centro">
         <h1><img src="imagenes/logo.png" id="logoBig"></h1>
@@ -211,7 +211,7 @@
 <!-- EXAMEN -->
 <div data-role="page" id="pageexamen" style="background-color:#fff">
 
-     <div data-role="header">
+     <div data-role="header" data-position="fixed">
        <a href="#mypanel" class="ui-btn-left options"><span class="pe-7s-menu"></a>
        <h1></h1>
        <a href="#" class="ui-btn-right closeSession salir"><span class="pe-7s-delete-user"></span></a>
@@ -268,10 +268,10 @@
       </div>
     </div>
     <div data-role="footer" data-theme="a" data-position="fixed">
-      <div class="ui-grid-b ui-responsive">
-          <div class="ui-block-a"><div class="ui-body ui-body-d noterror"><a href="#popupReporte" class="ui-shadow ui-btn ui-corner-all ui-btn-inline" data-rel="popup" data-position-to="window" data-transition="pop"><i class="pe-7s-comment"></i></a></div></div>
-          <div class="ui-block-b"><div class="ui-body ui-body-d" id="paginado">Pregunta N°1 de 100</div></div>
-          <div class="ui-block-c"><div class="ui-body ui-body-d"><a class="ui-shadow ui-btn ui-corner-all ui-btn-inline nextBtn"><span>SIGUIENTE</span><i class="pe-7s-right-arrow"></i></a></div></div>
+      <div class="ui-grid-b">
+        <div class="ui-block-a"><div class="ui-bar ui-bar-a noterror"><a href="#popupReporte" class="ui-shadow ui-btn ui-corner-all ui-btn-inline" data-rel="popup" data-position-to="window" data-transition="pop"><i class="pe-7s-comment"></i></a></div></div>
+        <div class="ui-block-b"><div class="ui-bar ui-bar-a paginado">Pregunta N°1 de 100</div></div>
+        <div class="ui-block-c"><div class="ui-bar ui-bar-a"><a href="#" class="ui-shadow ui-btn ui-corner-all ui-btn-inline nextBtn"><span>SIGUIENTE</span><i class="pe-7s-right-arrow"></i></a></div></div>
       </div><!-- /grid-b -->
     </div>
 </div><!-- /footer -->
