--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 </head>
 <body>
   <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&appId=1536370399923784&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <div data-role="page" id="pageadmin">
 
      <div data-role="header" data-theme="b"></div><!-- /header -->
@@ -79,7 +86,8 @@
           <p id="erlogin" class="error"></p>
         </form>
         <a href="#" id="login" class="ui-btn ui-corner-all">Ingresar</a>
-        <a href="#" id="fconnect"><img src="imagenes/facebook.jpg" width="180"></a> 
+        <!--<a href="#" id="fconnect"><img src="imagenes/facebook.jpg" width="180"></a> -->
+        <div class="fb-login-button" id="fconnect" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
         <a href="#pageregistrarse" class="registrobtn ui-btn ui-corner-all">Registrarse</a>
         
       </div>
