--- a/index.html
+++ b/index.html
@@ -121,11 +121,27 @@
           <input type="checkbox" name="terminos-1a" id="terminos-1a" checked="">
           <label for="terminos-1a">Deseo recibir información a mi e-mail sobre esta aplicación.</label>
           <input type="checkbox" name="terminos-1b" id="terminos-1b" checked="">
-          <label for="terminos-1b">Acépto los términos y condiciones.</label>
+          <label for="terminos-1b"><a href="#pageterminos">Acépto los términos y condiciones.</a></label>
        <p id="erterminos" class="error"></p>
        </fieldset>
        <a href="#" id="registrar" class="ui-btn ui-corner-all"><i class="pe-7s-add-user pe-fw"></i>Aceptar</a>
    </form>
+
+</div><!-- /content -->
+
+<div data-role="footer" data-theme="b" data-position="fixed">
+   <a href="#" data-rel="back" class="volver" data-theme="a"><i class="pe-7s-left-arrow pe-fw"></i></a>
+   <p align="right" class="firma">Powered by <img src="imagenes/logomedapps.png" width="100" align="top"></p>
+</div><!-- /footer -->
+</div><!-- /page -->
+
+<div data-role="page" id="pageterminos">
+
+ <div data-role="header" data-theme="b"><h1></h1></div><!-- /header -->
+
+ <div role="main" class="ui-content" >
+       <h2>Titulo</h2>
+       <p>TEXTO</p>
 
 </div><!-- /content -->
 
