Lectura de terminos

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
           <input type="checkbox" name="terminos-1a" id="terminos-1a" checked="">
           <label for="terminos-1a">Deseo recibir información a mi e-mail sobre esta aplicación.</label>
           <input type="checkbox" name="terminos-1b" id="terminos-1b" checked="">
-          <label for="terminos-1b"><a href="#pageterminos">Acépto los términos y condiciones.</a></label>
+          <label for="terminos-1b">Acépto los términos y condiciones.</label>
+      <a href="#pageterminos">Leer términos y condiciones</a>
        <p id="erterminos" class="error"></p>
        </fieldset>
        <a href="#" id="registrar" class="ui-btn ui-corner-all"><i class="pe-7s-add-user pe-fw"></i>Aceptar</a>
