se agrego el texto de terminos

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <label for="terminos-1a">Deseo recibir información a mi e-mail sobre esta aplicación.</label>
           <input type="checkbox" name="terminos-1b" id="terminos-1b" checked="">
           <label for="terminos-1b">Acépto los términos y condiciones.</label>
-      <a href="#pageterminos">Leer términos y condiciones</a>
+      <a href="#pageterminos" style="margin-top:15px;margin-bottom:15px;">Leer términos y condiciones</a>
        <p id="erterminos" class="error"></p>
        </fieldset>
        <a href="#" id="registrar" class="ui-btn ui-corner-all"><i class="pe-7s-add-user pe-fw"></i>Aceptar</a>
@@ -141,9 +141,45 @@
  <div data-role="header" data-theme="b"><h1></h1></div><!-- /header -->
 
  <div role="main" class="ui-content" >
-       <h2>Titulo</h2>
-       <p>TEXTO</p>
-
+<h2>Términos y condiciones de uso de MedChoice (propiedad de AppChoice)</h2>
+       <p>Este contrato describe los términos y condiciones  (los &quot;Términos y Condiciones&quot;) aplicables al uso de los servicios ofrecidos por AppChoice dentro del sitio <a href="http://www.appchoice.com.ar/" target="_blank">www.appchoice.com.ar</a> (&quot;AppChoice&quot; o el &quot;sitio&quot;) para su producto &quot;MedChoice&quot; (&quot;el Servicio&quot;).</p>
+<p>Los Términos y Condiciones de Medchoice son parte integrante de los Términos y Condiciones Generales de AppChoice. Mediante la aceptación de los Términos y Condiciones Generales en el momento de la registración el Usuario acepta las políticas aquí contenidas.</p>
+<p>CUALQUIER PERSONA QUE NO ACEPTE ESTOS TÉRMINOS Y CONDICIONES GENERALES, LOS CUALES TIENEN UN CARÁCTER OBLIGATORIO Y VINCULANTE, DEBERÁ ABSTENERSE DE UTILIZAR EL SITIO Y/O LOS SERVICIOS.</p>
+<p>El Usuario debe leer, entender y aceptar todas las condiciones establecidas en los Términos y Condiciones así como en los demás documentos incorporados a los mismos por referencia, previo a la utilización de MedChoice.</p>
+<p>&nbsp;</p>
+<p><strong>1. Objeto</strong></p>
+<p> MedChoice es una APP, que permite la realización de exámenes de carácter médico, generando un puntaje y un ranking. Estos exámenes son de uso público, en su mayoría exámenes utilizados en años previos. El objetivo principal de esta aplicación es que el usuario pueda practicar, simulando la vida real, para llegar al examen en cuestión más preparado.</p>
+<p> </p>
+<p><strong>2. Licencia de Software</strong></p>
+<p>Los Servicios que provee MedChoice así como todos los derechos de propiedad intelectual inherentes al Software son propiedad exclusiva de AppChoice. AppChoice se reserva todos los derechos sobre el Software que no se le otorgan expresamente al Usuario por el presente.</p>
+<p>Medchoice otorga al Usuario una licencia limitada, revocable, no exclusiva e intransferible de acceso y uso remoto del Software, únicamente a los fines de realizar los exámenes provistos, realizar sugerencias, enviar exámenes y/o preguntas que puedan nutrir al software. Sin la posibilidad de reclamar por derechos intelectuales sobre los mismos.</p>
+<p>El Usuario reconoce que el Software, así como su estructura, organización y código fuente son secretos comerciales valiosos que pertenecen a AppChoice. Por lo tanto, excepto por los permisos expresamente previstos en el presente, el Usuario no podrá, directa o indirectamente, por sí o a través de terceros, (a) modificar, adaptar, alterar o traducir el Software o crear obras derivadas a partir del Software; (b) distribuir, conceder la licencia a terceros, ofrecer en locación o préstamo, o transferir de cualquier otro modo el Software a terceros; (c) aplicar herramientas de ingeniería inversa para decodificar, decompilar, desensamblar o intentar de cualquier otro modo descifrar el código fuente del Software; o (d) transferir a terceros el derecho sobre la aplicación.</p>
+<p>&nbsp;</p>
+<p><strong>3. Responsabilidades</strong></p>
+<p>AppChoice prestará los Servicios en el estado en el que se encuentran, sin prestar ninguna garantía expresa, implícita o legal, incluidas las de disponibilidad, adecuación para usos o sistemas determinados, ausencia de violaciones o errores. AppChoice no garantiza el uso continuado e ininterrumpido de MedChoice, por tal motivo los Usuarios NO podrán imputarle responsabilidad alguna ni exigir pago por lucro cesante, en virtud de perjuicios resultantes de dificultades técnicas o fallas en los sistemas o en Internet o cualquier otro tipo de error.</p>
+<p>El Usuario reconoce y acepta que las limitaciones de responsabilidad convenidas en los presentes Términos y Condiciones constituyen un elemento esencial del acuerdo y por lo tanto resultan razonables, toda vez que constituyen un elemento esencial para mantener las condiciones económicas del contrato.</p>
+<p>&nbsp;</p>
+<p><strong>4. Servicios Adicionales de Medchoice</strong></p>
+<p>Appchoice podrá prestar todos o cualquiera de los siguientes Servicios Adicionales que solicite el Usuario, previa aceptación de los términos y condiciones aplicables y el pago de las tarifas, si correspondiera, por parte del Usuario:<strong> </strong></p>
+<p><strong>4.2 Otros servicios</strong></p>
+<p>MedChoice podrá ofrecer otros servicios compatibles y relacionados. Si el Usuario se suscribe a estos servicios adicionales, deberá leer y aceptar los Términos y Condiciones correspondientes a los mismos.</p>
+<p>MedChoice se reserva el derecho de modificar los Servicios que presta por otros equivalentes o iguales, sin previo aviso.</p>
+<p>&nbsp;</p>
+<p><strong>5. Contenido de la App</strong></p>
+<p>Appchoice no brinda garantía alguna sobre el material contenido o publicado en MedChoice atento que los mismos fueron obtenidos de manera pública y en su mayoría no tienen avales oficialies, incluyendo pero no limitado a que la información publicada sea exacta o veraz, como así tampoco asegura que la información suministrada por terceros proveedores de contenido o Usuarios, se encuentre libre de errores o virus, imprecisiones técnicas, etc.</p>
+<p>AppChoice no será responsable por los daños o perjuicios de cualquier naturaleza producidos en razón de defectos, errores, virus, imprecisiones técnicas, etc.</p>
+<p>Medchoice no está obligado a mantener un back-up de la información relacionada con las operaciones de la Tienda del Usuario. El Usuario deberá tomar las medidas que considere adecuadas para mantener dicha información conforme a sus necesidades y exigencias.</p>
+<p>&nbsp;</p>
+<p><strong>8. Tarifas</strong></p>
+<p>De corresponder, el usuario pagará las tarifas correspondientes por la prestación de los Servicios que solicite que no sean de carácter gratuito.</p>
+<p> MedChoice podrá modificar la Política de Tarifas y las tarifas que cargue por sus Servicios en cualquier momento.</p>
+<p>&nbsp;</p>
+<p><strong>9.- Autorizaciones</strong></p>
+<p>MedChoice no tendrá obligación de informar a los Usuarios respecto de la realización de interrupciones en el Servicio que fueran necesarias a los fines de su optimización o mantenimiento.</p>
+<p>MedChoice podrá instalar sin autorización de los Usuarios programas de protección o seguridad contra ataques externos, antivirus, firewall, upgrades de software y hardware.</p>
+<p>&nbsp;</p>
+<p><strong>10. Consecuencias de incumplimiento</strong></p>
+<p>En el caso de alguna violación a los Términos y Condiciones, MedChoice podrá - sin necesidad de previa notificación suspender o finalizar algunos o todos los Servicios, bloquear cualquier actividad abusiva y/o tomar cualquier acción que sea considerada apropiada a su exclusivo criterio.</p>
 </div><!-- /content -->
 
 <div data-role="footer" data-theme="b" data-position="fixed">
