--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <option value="a">uno</option>
         <option value="b">dos</option>
       </select>
-      <table data-role="table" id="table-column-toggle" data-mode="columntoggle" class="ui-responsive table-stroke">
+      <table data-role="table" id="table-custom-2" data-mode="columntoggle" class="table-stroke ui-responsive" data-column-btn-theme="b" data-column-btn-text="Columnas" data-column-popup-theme="a">
      <thead>
        <tr>
          <th data-priority="2">Puesto</th>
