--- a/indexDEMO.html
+++ b/indexDEMO.html
@@ -401,13 +401,13 @@
         <option value="a">uno</option>
         <option value="b">dos</option>
       </select>
-      <table data-role="table" id="table-column-toggle" data-mode="columntoggle" class="ui-responsive table-stroke">
+      <table data-role="table" id="table-custom-2" data-mode="columntoggle" class="ui-body-d ui-shadow table-stripe ui-responsive" data-column-btn-theme="b"  data-column-popup-theme="a">
      <thead>
        <tr>
-         <th data-priority="2">Puesto</th>
+         <th>Puesto</th>
          <th>Usuario</th>
-         <th data-priority="3">Puntaje</th>
-         <th data-priority="1"><abbr title="Tiempo">Tiempo</abbr></th>
+         <th>Puntaje</th>
+         <th><abbr title="Tiempo">Tiempo</abbr></th>
        </tr>
      </thead>
      <tbody id="resRanking">
